@@ -1,1 +1,2 @@
 set cc @CC@
+set python @PYTHON@
